spacing fix

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -177,7 +177,7 @@
  * Page content
  */
 .page-content {
-  padding: $spacing-unit*4 0;
+  padding: $spacing-unit*0 0;
   h1, h2, h3, h4 {
     margin-top: $spacing-unit*4;
   }
@@ -197,6 +197,7 @@
 
 .post-list {
   margin: 0 -8px;
+  padding: 0;
   list-style: none;
 
   > li {
